prometheus/ingress.yml
# Source: prometheus/templates/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    component: "server"
    app: prometheus
    release: 15.8.5
    chart: prometheus-15.8.5
    heritage: Helm
  name: prometheus-server
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.lan.repe.re
      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
